[package]
name = "derive-key"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
sha3 = "0.9"
curve25519-dalek = {path = "../curve25519-dalek"}

[dev-dependencies]
rand = "0.8.0"