[package]
name = "derive-key"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
sha3 = "0.9"
curve25519-dalek = {version = "3", default-features = false, features = ["u32_backend"]}
wasm-bindgen = "0.2.71"
serde_json = "1.0.64"
serde = {version = "1.0.123",  features = ["derive"] }

[dev-dependencies]
rand = "0.8.0"
